<resources>
    <string name="app_name">Udacity Popular Movies (st2)</string>
    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>
    <string name="default_overview_text">Overview</string>
    <string name="default_release_date_text">Release Date</string>
    <string name="default_movie_title">Movie Title</string>
    <string name="default_poster_image">Movie Poster</string>
    <string name="default_rating_text">Rating</string>

    <string name="release_date_label">Release Date</string>
    <string name="overview_label">Overview</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>

    <string name="rating_label">Rating</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="play_content_description">Play</string>
    <string name="movie_review_author_label">Author</string>
    <string name="movie_review_label">Review</string>
    <string name="favorite_switch_text">Favorite</string>
    <string name="favorites_list">Favorites</string>
    <string name="trailer_demo_url_text">Trailer 1</string>
    <string name="movie_demo_author">Movie Test Author</string>
    <string name="movie_demo_review">Lorem ipsum lala bba ba</string>
</resources>