<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/iv_detail_movie_poster"
            android:layout_width="149dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/default_poster_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
        <!-- https://stackoverflow.com/questions/5033012/auto-scale-textview-text-to-fit-within-bounds -->
        <TextView
            android:id="@+id/tv_detail_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16sp"
            android:text="@string/default_movie_title"
            android:textStyle="bold"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/release_date_label"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_title" />

        <TextView
            android:id="@+id/tv_details_release_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/default_release_date_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_title" />

        <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rating_label"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label" />

        <TextView
            android:id="@+id/tv_movie_rating"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_rating_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_release_date" />

        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/default_overview_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_label" />

        <TextView
            android:id="@+id/tv_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/overview_label"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_poster" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>